--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"MovieGenre.csv\", encoding = \"ISO-8859-1\")"
@@ -1098,7 +1100,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#drop 145 movies with NaN genre\n",
@@ -1142,7 +1146,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['Genre2'] = df['Genre'].map(lambda ls: ' '.join(ls.split(\"|\")))"
@@ -1762,7 +1768,7 @@
    "source": [
     "#movie-genre dataset\n",
     "mg = df[['imdbId','Genre2']]\n",
-    "mg"
+    "mg.rename(columns = {'imdbId':'image_name','Genre'}) "
    ]
   },
   {
